# third_party_libphonenumber

./: .gitattributes  README.OpenSource  README.en.md  README.md  bundle.json
cpp/: BUILD.gn
cpp/src/phonenumbers/: asyoutypeformatter.cc  metadata.cc  phonemetadata.pb.cc  phonemetadata.pb.h  phonenumber.pb.cc  phonenumber.pb.h  phonenumbermatcher.cc  phonenumberutil.cc  phonenumberutil.h  shortnumberinfo.cc  shortnumberinfo.h
cpp/src/phonenumbers/base/strings/: string_piece.cc
cpp/src/phonenumbers/geocoding/: geocoding_data.cc  geocoding_warpper.cc  geocoding_warpper.h
cpp/src/phonenumbers/ohos/: compressed_geocoding_data_processor.cc  compressed_geocoding_data_processor.h  geocoding_data.pb.cc  geocoding_data.pb.h  update_geocoding.cc  update_geocoding.h  update_libgeocoding.cc  update_libgeocoding.h  update_libphonenumber.cc  update_libphonenumber.h  update_metadata.cc  update_metadata.h
cpp/src/phonenumbers/ohos/etc/: version.txt
cpp/test/: BUILD.gn
cpp/test/phonenumbers/: asyoutypeformatter_test.cc  phonenumberutil_test.cc
cpp/test/phonenumbers/geocoding/: geocoding_test_data.cc
resources/: PhoneNumberMetadata.xml
resources/geocoding/bg/: 359.txt
resources/geocoding/en/: 212.txt  359.txt  381.txt  383.txt  55.txt  86.txt  886.txt
resources/geocoding/fr/: 212.txt
resources/geocoding/pt/: 55.txt
resources/geocoding/sr/: 381.txt  383.txt
resources/geocoding/zh/: 86.txt  886.txt
resources/geocoding/zh_Hant/: 886.txt
tools/cpp/src/cpp-build/: generate_geocoding_data.cc
